tests/machine/x/fortran/python_auto.f90
program python_auto
  implicit none
  print *, sqrt(16)
  print *, acos(-1.0)
  contains
end program python_auto
